# ledger_recon

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: finance_recon_project.mdc
config/: type_labels.json
docs/: README.md
docs/non-technical/: FINANCE_TEAM_WORKBOOK_GUIDE.md  NON_TECHNICAL_DOCUMENTATION.md
docs/technical/: CFO_SUBMISSION_VALIDATION_CHECKLIST.md  RECON_ENGINE_HARDENING.md  TECHNICAL_DOCUMENTATION.md
scripts/: run_ai_standardization.cmd  run_ai_standardization.ps1
src/: config.py
tests/: test_build_all_recon_workbooks.py  test_config.py  test_formalization_ai_mode_off.py  test_formalization_ai_repair.py  test_formalization_extraction_quality.py  test_formalization_parsers.py  test_formalization_reference_normalization.py  test_formalization_sheet_names.py  test_formalization_special_rows.py  test_formalization_type_classification.py  test_formalization_validation.py  test_formalization_workbook_writer.py  test_imports.py  test_openai_compatible_client.py  test_prompt_builder.py  test_reconciliation_ai_arbitration.py  test_reconciliation_annexure_builder.py  test_reconciliation_engine_hardening.py  test_reconciliation_formula_audit.py  test_reconciliation_matching_engine.py  test_reconciliation_presentation.py  test_reconciliation_reference_profile.py  test_reconciliation_summary_builder.py  test_reconciliation_validation.py  test_reconciliation_workbook_output.py  test_reference_style.py  test_runners.py  test_schema.py  test_type_labeler.py  test_unknown_label_grouping.py
(+48 files in other folders)
