[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-recon"
version = "0.1.0"
description = "Finance ledger reconciliation automation - raw PDF context extraction stage only."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
